# sigoptlite

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  PACKAGE.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: coverity.yml  scorecard.yml  tests.yml
sigoptlite/: best_assignments.py  broker.py  builders.py  driver.py  models.py  sources.py  validators.py
test/: base_test.py  constants.py  test_adapter.py  test_broker.py  test_builders.py  test_compute_mode.py  test_driver.py  test_models.py  test_sources.py
test/endpoints/: test_best_assignments.py  test_experiment.py  test_observation.py  test_suggestion.py
test/features/: test_conditionals.py  test_constraints.py  test_multiple_metrics.py  test_multisolution.py  test_multitask.py  test_priors.py  test_search.py
tools/: check_copyright_and_license_disclaimers.py
