[metadata]
name = sigoptlite
version = 0.1.1
description = In memory driver for SigOpt
license = Apache-2.0
url = https://sigopt.org
maintainer = SigOpt
maintainer_email = support@sigopt.com
long_description = In memory driver for SigOpt
classifiers =
  Development Status :: 4 - Beta

[options]
python_requires = >=3.10
packages = find:
install_requires =

[options.packages.find]
exclude=
  test*

[flake8]
ignore=E129,E127,E203,E302,E131,E111,E114,E121,E501,E126,E123,E305,E402,I101,I100,N806,F403,E241,E731,F999,F401,F405,W503,T001,E741,W504
